force-app/main/default/objects/Prospectos__c/Prospectos__c.object-meta.xml
<CustomObject>
    <label>Prospectos</label>
    <nameField>
        <label>Nombre de Prospectos</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prospectos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>