force-app/main/default/objects/Prospectos__c/fields/Estatus_BIDS_prospecto__c.field-meta.xml
<CustomField>
    <fullName>Estatus_BIDS_prospecto__c</fullName>
    <label>Estatus BIDS prospecto</label>
    <length>25</length>
    <type>Text</type>
</CustomField>