force-app/main/default/objects/Prospectos__c/fields/Formula_Fecha_Creacion_2__c.field-meta.xml
<CustomField>
    <fullName>Formula_Fecha_Creacion_2__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula_Fecha_Creación_2</label>
    <type>Date</type>
</CustomField>