force-app/main/default/objects/Prospectos__c/fields/Formula_Fecha_Creacion__c.field-meta.xml
<CustomField>
    <fullName>Formula_Fecha_Creacion__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula_Fecha_Creación</label>
    <type>Date</type>
</CustomField>