force-app/main/default/objects/Prospectos__c/fields/Id_Prospecto_SF_BIDS__c.field-meta.xml
<CustomField>
    <fullName>Id_Prospecto_SF_BIDS__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <externalId>true</externalId>
    <label>Id Prospecto SF BIDS</label>
    <type>AutoNumber</type>
</CustomField>