force-app/main/default/objects/Prospectos__c/fields/N_mero_de_Nombramiento__c.field-meta.xml
<CustomField>
    <fullName>N_mero_de_Nombramiento__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Número de Nombramiento</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>