force-app/main/default/objects/Prospectos__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Formula_Fecha_Creacion__c</columns>
    <columns>Formula_Fecha_Creacion_2__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>