force-app/main/default/objects/Prospectos__c/listViews/Test.listView-meta.xml
<ListView>
    <fullName>Test</fullName>
    <columns>NAME</columns>
    <columns>Id_Prospecto_SF_BIDS__c</columns>
    <columns>N_mero_de_Nombramiento__c</columns>
    <columns>Estatus_BIDS_prospecto__c</columns>
    <columns>Motivo_de_rechazo__c</columns>
    <filterScope>Mine</filterScope>
    <label>Test</label>
</ListView>